# sgx-qkms

./: .gitignore  Cargo.toml  README.md  structure.md
api/qkd014-server-gen/: Cargo.toml  README.md
api/qkd014-server-gen/.openapi-generator/: FILES
api/qkd014-server-gen/api/: openapi.yaml
api/qkd014-server-gen/docs/: Error.md  KeyContainer.md  KeyIdItem.md  KeyIds.md  KeyItem.md  KeyRequest.md  Status.md  key_management_entity_api.md
api/qkd014-server-gen/examples/client/: client_auth.rs  main.rs
api/qkd014-server-gen/examples/server/: main.rs  server.rs  server_auth.rs
api/qkd014-server-gen/src/: lib.rs  models.rs  types.rs
api/qkd014-server-gen/src/apis/: key_management_entity.rs  mod.rs
api/qkd014-server-gen/src/client/: mod.rs
api/qkd014-server-gen/src/server/: mod.rs
examples/: gather.toml
scripts/: gen-embed.sh  gen-mtls-certs.sh  test-etsi014-status.sh  test.sh
src/: api_models.rs  blob_store.rs  enrollment_client.rs  enrollment_service.rs  etsi014_handler.rs  http_protocol.rs  main.rs
