[package]
name = "sgx-qkms"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "custom-provider"] }
rustls-pemfile = "2"
x509-parser = "0.16"
rustls-mbedcrypto-provider = "0.1.1"
