[package]
name = "sgx-qkms"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "custom-provider"] }
rustls-pemfile = "2"
x509-parser = { version = "0.16", features = ["verify"] }
rustls-mbedcrypto-provider = "0.1.1"
rust-embed = { version = "8", features = ["debug-embed"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
httparse = "1"
percent-encoding = "2"
sgx-isa = { version = "0.2", features = ["sgxstd"] }
mbedtls = { version = "0.13", default-features = false, features = ["std", "x509", "rdrand"] }
sha2 = "0.10"
